--- a/PredPreyBoids/Assets/Assets.vcxproj
+++ b/PredPreyBoids/Assets/Assets.vcxproj
@@ -67,7 +67,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <MeshContentTask Include="frog.FBX" />
+    <MeshContentTask Include="crab.FBX" />
     <MeshContentTask Include="roach.FBX" />
     <MeshContentTask Include="table.FBX" />
     <MeshContentTask Include="treasure_chest.FBX" />
