Semi-Broken Commit
Attempting to get UIInterfaceManager setup

--- a/PredPreyBoids/Game/Tutorial01.vcxproj
+++ b/PredPreyBoids/Game/Tutorial01.vcxproj
@@ -364,6 +364,7 @@
     <ClCompile Include="light.cpp" />
     <ClCompile Include="turret_base.cpp" />
     <ClCompile Include="Tutorial01.cpp" />
+    <ClCompile Include="userInterfaceManager.cpp" />
     <ClCompile Include="VBCube.cpp" />
     <ClCompile Include="VBGO.cpp" />
   </ItemGroup>
@@ -389,6 +390,7 @@
     <CLInclude Include="resource.h" />
     <ClInclude Include="SpikedVB.h" />
     <ClInclude Include="Turret_base.h" />
+    <ClInclude Include="userInterfaceManager.h" />
     <ClInclude Include="VBCube.h" />
     <ClInclude Include="VBGO.h" />
     <ClInclude Include="vertex.h" />
