--- a/PredPreyBoids/Game/Tutorial01.vcxproj.filters
+++ b/PredPreyBoids/Game/Tutorial01.vcxproj.filters
@@ -97,6 +97,9 @@
     <ClInclude Include="boidManager.h">
       <Filter>Engine\GameObject Headers</Filter>
     </ClInclude>
+    <ClInclude Include="userInterfaceManager.h">
+      <Filter>Engine\GameObject Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Tutorial01.rc">
@@ -141,6 +144,9 @@
       <Filter>Engine\GameObject Source</Filter>
     </ClCompile>
     <ClCompile Include="boidManager.cpp">
+      <Filter>Engine\GameObject Source</Filter>
+    </ClCompile>
+    <ClCompile Include="userInterfaceManager.cpp">
       <Filter>Engine\GameObject Source</Filter>
     </ClCompile>
   </ItemGroup>
