--- a/PredPreyBoids/Game/Tutorial01.vcxproj
+++ b/PredPreyBoids/Game/Tutorial01.vcxproj
@@ -362,6 +362,7 @@
     <ClCompile Include="gameobject.cpp" />
     <ClCompile Include="GameObject2D.cpp" />
     <ClCompile Include="light.cpp" />
+    <ClCompile Include="predCamera.cpp" />
     <ClCompile Include="turret_base.cpp" />
     <ClCompile Include="Tutorial01.cpp" />
     <ClCompile Include="VBCube.cpp" />
@@ -386,6 +387,7 @@
     <ClInclude Include="MyEffectsFactory.h" />
     <ClInclude Include="ObjectList.h" />
     <ClInclude Include="pillow.h" />
+    <ClInclude Include="predCamera.h" />
     <CLInclude Include="resource.h" />
     <ClInclude Include="SpikedVB.h" />
     <ClInclude Include="Turret_base.h" />
